--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beatrice Francis Carey Homepage</title>
     <meta name="description" content="Beatrice Francis Carey, Author of Jesus Books Homepage">
 </head>
