--- a/NextPage.html
+++ b/NextPage.html
@@ -3,6 +3,8 @@
 
 <head>
 
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Beatrice Francis Carey TestPage</title>
 	<meta name="description" content="Beatrice Francis Carey, Author of Jesus Books Homepage">
 	<style>
