--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1> <strong>Beatrice Francis Carey</strong> </h1>
-					<p>Man shall not live by bread alone but by by every 
+					<p>Man shall not live by bread alone, <br /> but by by every 
 					word that proceedeth out of my mouth.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
