Just modifying sight

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Princeofpeaceknow.com</title>
 		<meta charset="utf-8" />
@@ -12,17 +12,22 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		img {
+			border-radius: 100px;
+		}
+	</style>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<span><img src="images/BookPics/BeaProfile.jpg" width="50" height="" ></span>
 					<h1> <strong>Beatrice Francis Carey</strong> </h1>
-					<p>Man shall not live by bread alone, <br /> but by by every 
-					word that proceedeth out of my mouth.</p>
+					<p>"Man shall not live by bread alone, <br /> but by by every 
+					word that proceedeth out of my mouth."</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="bookindex.html" class="button scrolly">Discover</a></li>
 					</ul>
 				</div>
 			</section>
@@ -39,7 +44,7 @@
 							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/ElvisPresley.jpg" alt="Elvis Presley" /></span>
+							<span class="image fit"><img src="images/ElvisPresley.jpg" alt="Elvis Presley Wallpaper" /></span>
 						</div>
 					</div>
 				</div>
