--- a/bookindex.html
+++ b/bookindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Beatrice Francis Carey BookIndex</title>
+	<title>Beatrice Francis Carey's BookIndex</title>
 	<meta name="description" content="Beatrice Francis Carey, Author of Jesus Books Homepage">
 </head>
 
