--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 		<!-- Navigation (Stays on Top) -->
 		<div class="w3-top w3-bar w3-black">
-			<a href="#home" class="w3-bar-item w3-button">Home</a>
-			<a href="#about" class="w3-bar-item w3-button">About</a>
-			<a href="#members" class="w3-bar-item w3-button">Members</a>
+			<a href="index.html" class="w3-bar-item w3-button">Home</a>
+			<a href="aboutPage.html" class="w3-bar-item w3-button">About</a>
+			<a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="w3-bar-item w3-button">Blog</a>
 			<a href="#contact" class="w3-bar-item w3-button">Contact</a>
 			</div>
 
@@ -57,7 +57,7 @@
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="main style2">
+			<section id="three" class="main style2s tiledBackground">
 				<div class="container">
 					<header class="major">
 						<h2>Here's Where the Bonus' Come in.</h2>
