--- a/bookindex.html
+++ b/bookindex.html
@@ -3,48 +3,68 @@
 
 <head>
 	<title>Beatrice Francis Carey's BookIndex</title>
-	<meta name="description" content="Beatrice Francis Carey, Author of Jesus Books Homepage">
+	<meta name="description" content="width=device-width, initial-scale=1.0 user-scalable=no">
+	<link rel="stylesheet" href="assets/css/mycss.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<w3><link rel="stylesheet" href="assets/css/w3.css" /></w3>
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 
 <body>
-	<a href="index.html">Homepage</a>
-	<p>
-	<table border="1">
-		<tr>
-			<th>Book Title</th>
-			<th>Kindle Price</th>
-			<th>Paperback Price</th>
-			<th>Hardcover Price</th>
-		</tr>
-		<tr>
-			<td>Jesus Of Nazareth Our Liberator</td>
-			<td>$1.99</td>
-			<td>$20.99</td>
-			<td>$27.99</td>
-		</tr>
-		<tr>
-			<td>The Christ of God</td>
-			<td>$2.99</td>
-			<td>$24.07</td>
-			<td>$2.99</td>
-		</tr>
-		<tr>
-			<td>King Jesus</td>
-			<td>$NA</td>
-			<td>$NA</td>
-			<td>$NA</td>
-		</tr>
-		<tr>
-			<td>Prince of Peace</td>
-			<td>$NA</td>
-			<td>$NA</td>
-			<td>$NA</td>
-		</tr>
-	</table>
-	</p>
-	<p><a
-			href="https://www.amazon.com/s?i=digital-text&rh=p_27%3ABeatrice+Francis+Carey&s=relevancerank&text=Beatrice+Francis+Carey&ref=dp_byline_sr_ebooks_1">Amazon.com</a>
-	</p>
-</body>
+
+		<!-- Navigation (Stays on Top) -->
+		<div class="w3-top w3-bar w3-dark-grey w3-wide w3-padding w3-card">
+			<a href="index.html" class="w3-bar-item w3-button">Home</a>
+			<div class="w3-right w3-hide-small">
+		    	<a href="aboutPage.html" class="w3-bar-item w3-button">About</a>
+		    	<a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="w3-bar-item w3-button">Blog</a>
+		    	<a href="bookindex.html" class="w3-bar-item w3-button">Books</a>
+		    </div>
+		</div>
+		<hr>
+		<div>
+			<div class="w3-container" style="width: 50%;">
+				<p>
+					<table class="w3-table w3-gray w3-round-large w3-text-black w3-bordered">
+						<tr>
+							<th>Book Title</th>
+							<th>Kindle Price</th>
+							<th>Paperback Price</th>
+							<th>Hardcover Price</th>
+						</tr>
+						<tr>
+							<td>Jesus Of Nazareth Our Liberator</td>
+							<td>$1.99</td>
+							<td>$20.99</td>
+							<td>$27.99</td>
+						</tr>
+						<tr>
+							<td>The Christ of God</td>
+							<td>$2.99</td>
+							<td>$24.07</td>
+							<td>$2.99</td>
+						</tr>
+						<tr>
+							<td>King Jesus</td>
+							<td>$NA</td>
+							<td>$NA</td>
+							<td>$NA</td>
+						</tr>
+						<tr>
+							<td>Prince of Peace</td>
+							<td>$NA</td>
+							<td>$NA</td>
+							<td>$NA</td>
+						</tr>
+					</table>
+				</p>
+			</div>
+		
+			<p style="padding-left: 25px;">
+				<a class="w3-button w3-green w3-round-large w3-padding w3-text-black" href="https://www.amazon.com/s?i=digital-text&rh=p_27%3ABeatrice+Francis+Carey&s=relevancerank&text=Beatrice+Francis+Carey&ref=dp_byline_sr_ebooks_1" style="padding: 20px;">Amazon.com</a>
+			</p>
+		</div>
+	</body>
 
 </html>
