--- a/index.html
+++ b/index.html
@@ -15,27 +15,39 @@
 		<w3><link rel="stylesheet" href="assets/css/w3.css" /></w3>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
 	</head>
+
+	<style>
+		body,h1,h2,h3,h4,h5,h6 {
+		  font-family: 'Times New Roman', Times, serif;
+		}
+		</style>
+	
 	<body class="is-preload">
 
 		<!-- Navigation (Stays on Top) -->
-		<div class="w3-top w3-bar w3-black">
+		<div class="w3-top w3-bar w3-dark-grey w3-wide w3-padding w3-card">
 			<a href="index.html" class="w3-bar-item w3-button">Home</a>
+			<div class="w3-right w3-hide-small">
 			<a href="aboutPage.html" class="w3-bar-item w3-button">About</a>
 			<a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="w3-bar-item w3-button">Blog</a>
-			<a href="#contact" class="w3-bar-item w3-button">Contact</a>
+			<a href="bookindex.html" class="w3-bar-item w3-button">Books</a>
 			</div>
+		</div>
+		<hr>
 
 		<!-- Header -->
 			<section id="header">
+				<div>
+					<span><img src="images/BookPics/DiamondCrown.png" alt="" style="max-width: 200px;"></span>
+				</div>
 				<div class="inner">
-					<span class="BeaProfile"><img src="images/BookPics/BeaProfile.jpg"></span>
-					<h1> <strong>Beatrice Francis Carey</strong> </h1>
-					<p>"Man shall not live by bread alone, <br /> but by by every 
+					<span class="BeaProfile"><img src="images/BookPics/BeaProfile.jpg" alt="" /></span>
+					<h1 style="padding-top: 50px"><strong>Beatrice Francis Carey</strong></h1>
+					<p>"Man shall not live by bread alone, <br /> but by every 
 					word that proceedeth out of my mouth."</p>
 					<ul class="actions special">
 						<li><a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="button scrolly">Discover</a></li>
 					</ul>
-				
 				</div> 
 			</section>
 
@@ -57,7 +69,7 @@
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="main style2s tiledBackground">
+			<section id="three" class="main style2s">
 				<div class="container">
 					<header class="major">
 						<h2>Here's Where the Bonus' Come in.</h2>
@@ -67,15 +79,15 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/ElvisPresley.jpg" alt="" /></span>
 							<h3>Elvis Presley</h3>
-							<p>Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley </p>
+							<p class="w3-center">Here's where you can find the pics from the books but in color.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="/pictures.html" class="button">Pictures</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/BookPics/ElvisInCar.jpg" alt="" /></span>
 							<h3>Elvis Again</h3>
-							<p>Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley </p>
+							<p class="w3-center">Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley </p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -83,7 +95,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/ElvisPresley2.jpg" alt="" /></span>
 							<h3>Even More Elvis!</h3>
-							<p>Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley </p>
+							<p class="w3-center">Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley Elvis Presley </p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
