--- a/aboutPage.html
+++ b/aboutPage.html
@@ -2,31 +2,45 @@
 
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
-    <link rel="stylesheet" href="assets/css/mycss.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <w3><link rel="stylesheet" href="assets/css/w3.css" /></w3>
-    <script src="https://www.w3schools.com/lib/w3.js"></script>
-</head>
+    <head>
+        <title>About Page</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" >
+        <link rel="stylesheet" href="assets/css/mycss.css" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <w3><link rel="stylesheet" href="assets/css/w3.css" /></w3>
+        <script src="https://www.w3schools.com/lib/w3.js"></script>
+    </head>
 
-<body>
+	<style>
+		body,h1,h2,h3,h4,h5,h6 {
+		  font-family: 'Times New Roman', Times, serif;
+		}
+		</style>
 
-    <div class="w3-top w3-bar w3-black">
-        <a href="index.html" class="w3-bar-item w3-button">Home</a>
-        <a href="aboutPage.html" class="w3-bar-item w3-button">About</a>
-        <a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="w3-bar-item w3-button">Blog</a>
-        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+    <body class="is-preload">
+
+		<!-- Navigation (Stays on Top) -->
+		<div class="w3-top w3-bar w3-dark-grey w3-wide w3-padding w3-card">
+			<a href="index.html" class="w3-bar-item w3-button">Home</a>
+		    <div class="w3-right w3-hide-small">
+		    	<a href="aboutPage.html" class="w3-bar-item w3-button">About</a>
+		    	<a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="w3-bar-item w3-button">Blog</a>
+		    	<a href="bookindex.html" class="w3-bar-item w3-button">Books</a>
+		    </div>
+		</div>
+        <hr>
+        <div>
+            <div class="w3-display-container w3-center w3-text-white">
+                <img src="images/BookPics/ElvisInCar.jpg" alt="Elvis in a car" style="width:100%;max-width:8000px;">
+                <div class="w3-display-topmiddle w3-container w3-padding">
+                    <h1 style="color: white;">About Page</h1>
+                    <p>This page is just to describe what it's all about.</p>
+                </div>
+            </div>
         </div>
 
-    <div>
-        <h1>'</h1>
-        <h1>About Page</h1>
-        <p>This page is just to describe what it's all about.</p>
-    </div>
-</body>
+    </body>
 
 </html>
