--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 			<section id="three" class="main style2s">
 				<div class="container">
 					<header class="major">
-						<h2>Here's Where the Bonus' Come in.</h2>
+						<h2 class="w3-center w3-text-black">Here's Where the Bonus' Come in.</h2>
 					</header>
-					<p>Right now we just have Elvis here but this is where we'll have pitures from the book but in color, and even some more why not.</p>
+					<p class="w3-center w3-text-black">Right now we just have Elvis here but this is where we'll have pitures from the book but in color, and even some more why not.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/ElvisPresley.jpg" alt="" /></span>
-							<h3>Elvis Presley</h3>
-							<p class="w3-center">Here's where you can find the pics from the books but in color.</p>
+							<h3 class="w3-center w3-text-black">Elvis Presley</h3>
+							<p class="w3-center w3-text-black">Here's where you can find the pics from the books but in color.</p>
 							<ul class="actions special">
-								<li><a href="/pictures.html" class="button">Pictures</a></li>
+								<li><a href="/pictures.html" class="button w3-text-black">Pictures</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
