--- a/bookindex.html
+++ b/bookindex.html
@@ -11,6 +11,12 @@
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 
+<style>
+  body,h1,h2,h3,h4,h5,h6 {
+	font-family: 'Times New Roman', Times, serif;
+  }
+</style>
+
 <body>
 
 		<!-- Navigation (Stays on Top) -->
