--- a/bookindex.html
+++ b/bookindex.html
@@ -30,46 +30,48 @@
 		</div>
 		<hr>
 		<div>
-			<div class="w3-container" style="width: 50%;">
-				<p>
-					<table class="w3-table w3-gray w3-round-large w3-text-black w3-bordered">
-						<tr>
-							<th>Book Title</th>
-							<th>Kindle Price</th>
-							<th>Paperback Price</th>
-							<th>Hardcover Price</th>
-						</tr>
-						<tr>
-							<td>Jesus Of Nazareth Our Liberator</td>
-							<td>$1.99</td>
-							<td>$20.99</td>
-							<td>$27.99</td>
-						</tr>
-						<tr>
-							<td>The Christ of God</td>
-							<td>$2.99</td>
-							<td>$24.07</td>
-							<td>$2.99</td>
-						</tr>
-						<tr>
-							<td>King Jesus</td>
-							<td>$NA</td>
-							<td>$NA</td>
-							<td>$NA</td>
-						</tr>
-						<tr>
-							<td>Prince of Peace</td>
-							<td>$NA</td>
-							<td>$NA</td>
-							<td>$NA</td>
-						</tr>
-					</table>
-				</p>
-			</div>
-		
-			<p style="padding-left: 25px;">
-				<a class="w3-button w3-green w3-round-large w3-padding w3-text-black" href="https://www.amazon.com/s?i=digital-text&rh=p_27%3ABeatrice+Francis+Carey&s=relevancerank&text=Beatrice+Francis+Carey&ref=dp_byline_sr_ebooks_1" style="padding: 20px;">Amazon.com</a>
-			</p>
+			<span>
+				<div class="w3-container w3-dark-gray" style="height: 700px; width: 100%;">
+					<p>
+						<table class="w3-display-topmiddle w3-table-all w3-card-4 w3-border w3-border-black w3-round-large w3-gray w3-bordered w3-text-black" style="margin-top: 100px; max-width: 700px;">
+							<tr class="w3-gray w3-border w3-border-black">
+								<th>Book Title</th>
+								<th>Kindle Price</th>
+								<th>Paperback Price</th>
+								<th>Hardcover Price</th>
+							</tr>
+							<tr class="w3-gray w3-border w3-border-black w3-hover-dark-gray">
+								<td>Jesus Of Nazareth Our Liberator</td>
+								<td>$1.99</td>
+								<td>$20.99</td>
+								<td>$27.99</td>
+							</tr>
+							<tr class="w3-gray w3-border w3-border-black w3-hover-dark-gray">
+								<td>The Christ of God</td>
+								<td>$2.99</td>
+								<td>$24.07</td>
+								<td>$2.99</td>
+							</tr>
+							<tr class="w3-gray w3-border w3-border-black w3-hover-dark-gray">
+								<td>King Jesus</td>
+								<td>$NA</td>
+								<td>$NA</td>
+								<td>$NA</td>
+							</tr>
+							<tr class="w3-gray w3-border w3-border-black w3-hover-dark-gray">
+								<td>Prince of Peace</td>
+								<td>$NA</td>
+								<td>$NA</td>
+								<td>$NA</td>
+							</tr>
+						</table>
+					</p>
+					
+					<p>
+						<a class="w3-display-topmiddle w3-button w3-green w3-border w3-border-black w3-round-large w3-padding w3-text-black" href="https://www.amazon.com/s?i=digital-text&rh=p_27%3ABeatrice+Francis+Carey&s=relevancerank&text=Beatrice+Francis+Carey&ref=dp_byline_sr_ebooks_1" style="margin-top: 300px;">Amazon.com</a>
+					</p>
+				</div>
+			</span>
 		</div>
 	</body>
 
