--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				<div class="inner">
 					<span class="BeaProfile"><img src="images/BookPics/BeaProfile.jpg" alt="" /></span>
 					<h1 style="padding-top: 50px"><strong>Beatrice Francis Carey</strong></h1>
-					<p>"Man shall not live by bread alone, <br /> but by every 
-					word that proceedeth out of my mouth."</p>
+					<p>"If God did not exist, <br /> it would be necessary to invent him."</p>
+					<p style="padding-left: 15%;">Voltaire</p>
 					<ul class="actions special">
 						<li><a href="https://citiofbooks.com/blog/jesus-of-nazareth-our-liberator-by-beatrice-francis-carey-is-now-available-for-purchase/" class="button scrolly">Discover</a></li>
 					</ul>
