--- a/pictures.html
+++ b/pictures.html
@@ -38,21 +38,21 @@
 
     <hr>
 
-    <div class="w3-display-container w3-center" style="height: 1500px">
-      <img class="" src="images/BookPics/Backdrop.jpg" alt="" style="min-height: 1500px; width: 100%;">
+    <div class="w3-display-container w3-center" style="height: 745px">
+      <img src="images/BookPics/Backdrop.jpg" alt="" style="min-height: 3000px; width: 100%;">
       <h2 class="w3-display-topmiddle" style="margin-top: 1%;"><strong class="w3-text-black">Picture Gallery</strong></h2>
       
       
-      <div class="w3-display-middle w3-card-4 w3-round-xlarge w3-dark-grey w3-content" style="min-height: 500px; min-width: 400px; margin-top: 1%;">
+      <div class="w3-display-topmiddle w3-card-4 w3-round-xlarge w3-dark-grey w3-content" style="min-height: 500px; min-width: 400px; margin-top: 5%;">
         <div class="w3-container w3-content w3-center">
           <h3 class="w3-text-black">Prince of Peace Pics</h3>
           <div>
-            <img class="mySlides w3-round-xlarge" src="images/BookPics/QuilPaper&Ink.jpg" style="grid-row:span">
+            <img class="mySlides w3-round-xlarge" src="images/BookPics/QuilPaper&Ink.jpg" style="grid-row:span; width: 400px;">
             <img class="mySlides w3-round-xlarge" src="images/BookPics/Elvis'Bible.jpg" style="grid-row:span">
-            <img class="mySlides w3-round-xlarge" src="images/BookPics/Bumblebee.jpg" style="grid-row:span">
-            <img class="mySlides w3-round-xlarge" src="images/BookPics/PrinceOfPeaceRocks.jpg" style="grid-row:span">
-            <img class="mySlides w3-round-xlarge" src="images/BookPics/SalvadorDaliPainting.png" style="grid-row:span">
-            <img class="mySlides w3-round-xlarge" src="images/BookPics/ChickensInTree.jpg" style="grid-row:span">
+            <img class="mySlides w3-round-xlarge" src="images/BookPics/Bumblebee.jpg" style="grid-row:span; width: 400px;">
+            <img class="mySlides w3-round-xlarge" src="images/BookPics/PrinceOfPeaceRocks.jpg" style="grid-row:span; width: 500px;">
+            <img class="mySlides w3-round-xlarge" src="images/BookPics/SalvadorDaliPainting.png" style="grid-row:span; width: 500px;">
+            <img class="mySlides w3-round-xlarge" src="images/BookPics/ChickensInTree.jpg" style="grid-row:span; width: 500px;">
           </div>
           <hr>
           <h5></h5>
